Fix theme color in manifest and increase the contrast of link colors

--- a/src/components/scss/_colors.scss
+++ b/src/components/scss/_colors.scss
@@ -10,4 +10,4 @@ $lightBlue: #E2F9FF;
 $blue: #375d81;
 $darkBlue: #183152;
 $black: #000000;
-$teal: #05a2a2;
+$teal: #067777;
